--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="D:\Web Development\HTML-Personal Site\images\asi.JPG" alt="Asi Profile"></td>
+      <td><img src="images\asi.JPG" alt="Asi Profile"></td>
       <td><h1> Dr. Asi Solodar </h1>
       <p><em> Photonics and Electro-Optics Leader and EBL Expert </em></p>
       <p> <strong> <a href="https://in.bgu.ac.il/en/nano-fab/Pages/default.aspx">BGU Nano-Fabrication Center</a> </strong></em></p>
