--- a/index.html
+++ b/index.html
@@ -68,5 +68,5 @@
 <hr>
 <br>
 <br><br>
-<a href="D:\Web Development\HTML-Personal Site\For WEB\MyContacts.html"> Contact Me </a>
+<a href="MyContacts.html"> Contact Me </a>
 </html>
